; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_nl_cmd_dpipe_headers_get.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_nl_cmd_dpipe_headers_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.genl_info = type { %struct.devlink** }
%struct.devlink = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@DEVLINK_CMD_DPIPE_HEADERS_GET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.genl_info*)* @devlink_nl_cmd_dpipe_headers_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devlink_nl_cmd_dpipe_headers_get(%struct.sk_buff* %0, %struct.genl_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.genl_info*, align 8
  %6 = alloca %struct.devlink*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.genl_info* %1, %struct.genl_info** %5, align 8
  %7 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %8 = getelementptr inbounds %struct.genl_info, %struct.genl_info* %7, i32 0, i32 0
  %9 = load %struct.devlink**, %struct.devlink*** %8, align 8
  %10 = getelementptr inbounds %struct.devlink*, %struct.devlink** %9, i64 0
  %11 = load %struct.devlink*, %struct.devlink** %10, align 8
  store %struct.devlink* %11, %struct.devlink** %6, align 8
  %12 = load %struct.devlink*, %struct.devlink** %6, align 8
  %13 = getelementptr inbounds %struct.devlink, %struct.devlink* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* @EOPNOTSUPP, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %26

19:                                               ; preds = %2
  %20 = load %struct.genl_info*, %struct.genl_info** %5, align 8
  %21 = load i32, i32* @DEVLINK_CMD_DPIPE_HEADERS_GET, align 4
  %22 = load %struct.devlink*, %struct.devlink** %6, align 8
  %23 = getelementptr inbounds %struct.devlink, %struct.devlink* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @devlink_dpipe_headers_fill(%struct.genl_info* %20, i32 %21, i32 0, i32 %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %19, %16
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @devlink_dpipe_headers_fill(%struct.genl_info*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
